--- a/indexx.html
+++ b/indexx.html
@@ -20,6 +20,17 @@
     </script>
 </head>
 <body>
+            <h1 class="text-5xl  text-center mt-6">Welcome To <span class="text-purple-800  font-semibold">Top-G</span> Bank</h1>
+
+
+                        <section>
+
+                                <div>
+                                    
+                                </div>
+
+                        </section>
+
     
 </body>
 </html>
