log in validation complete

--- a/indexx.html
+++ b/indexx.html
@@ -28,14 +28,15 @@
                             <section class="bg-violet-300 mt-9 w-9/12 mx-auto p-12 rounded-lg">
                               <h3 class=" text-3xl font-semibold mb-6 pt-4">Please Log In Here</h3>
                                 <div class=" ">
-                                        <input class="block w-9/12 mb-4 p-2 text-xl rounded-lg" type="email" name="" id="" placeholder="Enter Your Email">
-                                        <input class="w-9/12 p-2  text-xl rounded-lg" type="password" name="" id="" placeholder="Enter Your Password">
-                                        <button class="bg-orange-500 block mt-5  w-28 p-2  rounded-md hover:bg-blue-600 text-xl font-semibold">Login</button>
+                                        <input class="block w-9/12 mb-4 p-2 text-xl rounded-lg" type="email" name="" id="email-section" placeholder="Enter Your Email">
+                                        <input class="w-9/12 p-2  text-xl rounded-lg" type="password" name="" id="pass-section" placeholder="Enter Your Password">
+                                        <button id="button-login" class="bg-orange-500 block mt-5  w-28 p-2  rounded-md hover:bg-blue-600 text-xl font-semibold">Login</button>
                                 </div>
                             
                             </section>
 
                     </main>
     
+                    <script src="js/login.js"></script>
 </body>
 </html>
