--- a/deposite.html
+++ b/deposite.html
@@ -41,7 +41,7 @@
             </div>
             <div class="p-8 bg-indigo-500 rounded-lg  ">
                 <h3 class="text-3xl text-white">Balance</h3>
-                <h3 class="text-3xl text-white">$1240</h3>
+                <h3 class="text-3xl text-white">$ <span id="total-balance">1240</span></h3>
             </div>
            
         </div>
