--- a/deposite.html
+++ b/deposite.html
@@ -37,7 +37,7 @@
             </div>
             <div class="p-8 bg-gray-600  rounded-lg ">
                 <h3 class="text-3xl text-white">Withdraw</h3>
-                <h3 class="text-3xl text-white">$0</h3>
+                <h3 class="text-3xl text-white">$ <span id="withdraw-balance">5</span></h3>
             </div>
             <div class="p-8 bg-indigo-500 rounded-lg  ">
                 <h3 class="text-3xl text-white">Balance</h3>
@@ -62,10 +62,10 @@
             <div class="p-8 bg-indigo-400 rounded-lg ">
                 <h3 class="text-3xl text-white mb-9">Please Withdraw</h3>
                     <div class=" ps-9 ">
-                        <input class="block w-9/12 mb-4 p-2 rounded-lg" type="email" name="" id="email-section"
+                        <input class="block w-9/12 mb-4 p-2 rounded-lg" type="email" name="" id="withdraw-section"
                             placeholder="$ amount you want to withdraw">
                
-                        <button id="button-login"
+                        <button id="button-withdraw"
                             class="bg-orange-500 block mt-9  w-28 p-2  rounded-md hover:bg-blue-600 text-xl font-semibold">Withdraw</button>
                     </div>
             </div>
@@ -77,7 +77,7 @@
 
      </main>
 
-
+ <script src="js/withdraw.js"></script>
      <script src="js/deposite.js"></script>
 </body>
 </html>
