--- a/deposite.html
+++ b/deposite.html
@@ -77,7 +77,7 @@
 
      </main>
 
- <script src="js/withdraw.js"></script>
-     <script src="js/deposite.js"></script>
+ <script src="withdraw.js"></script>
+     <script src="deposite.js"></script>
 </body>
 </html>
