--- a/indexx.html
+++ b/indexx.html
@@ -37,6 +37,6 @@
 
                     </main>
     
-                    <script src="js/login.js"></script>
+                    <script src="login.js"></script>
 </body>
 </html>
